# tablix

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
tablix/: __init__.py  _core.py  field.py  format.py  table.py
tablix/renderers/: __init__.py  _renderer.py  latex.py  markdown.py  terminal.py
test/: test_table.py
test/renderers/: test_latex.py  test_markdown.py  test_terminal.py
