[tool.poetry]
name = "tablix"
version = "0.1.0"
description = "A python package for generating structurally complex tables."
authors = ["unexcellent"]
readme = "README.md"
repository = "https://github.com/unexcellent/tablix"

[tool.poetry.dependencies]
python = ">=3.10, <3.15"

[tool.poetry.group.dev.dependencies]
ruff = "<1.0"

[tool.poetry.group.test.dependencies]
pytest = "<9.0"

[tool.ruff]
exclude = ["sandbox/*"]
line-length = 101

[tool.ruff.lint]
exclude = ["test/*"]
select = ["ALL"]
ignore = [
    "COM812", # conflicts with ruff formatter

    "D100", # imo no docstrings are necessary in public modules
    "D105", # imo no docstrings are necessary for magic functions
    "D107", # __init__ docstrings are not necessary
    "D203", # incompatible with D211
    "D213", # incompatible with D212

    "FBT001", # boolean positional args are fine imo

    "ISC001", # conflicts with ruff formatter

    "N802", # interferes with setting constant abstract properties

    "PGH003", # necessary for _QuantityBase.__eq__()

    "PLR0913", # many arguments are necessary for the quantities to enable enough different units

    "RUF012", # does not work with constants

    "TC001", # adds hard to understand compexity without providing a benefit for smaller projects
    "TC002", # same as TCH001
    "TC003", # same as TCH001

    "SIM103", # less readable in some cases imo

    "SLF001", # necessary for vector operations
]

[tool.pytest.ini_options]
xfail_strict = true
